fix: fix overflow

--- a/web/src/components/preview/Preview.css
+++ b/web/src/components/preview/Preview.css
@@ -19,7 +19,7 @@
   font-size: 9.75pt;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .app-preview__terminal .xterm {
